# eventus-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml
config/: application-dev.yml  application.yaml  application.yml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2024-02-12-225125_eventus_setup/: down.sql  up.sql
src/: api.rs  auth.rs  core.rs  feature.rs  main.rs  model.rs  schema.rs  template.rs
src/api/: model.rs  repository.rs
src/core/: config.rs  database.rs  logger.rs  model.rs  schema.rs
src/feature/: common.rs  static_files.rs
src/feature/common/: extenstion.rs
templates/: index.html
