[package]
name = "eventus-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime
tokio = { version = "1.36.0", features = ["full"] }
# Web Framework
axum = "0.7.4"
tower-http = { version = "0.5.2", features = ["fs", "trace", "compression-gzip"] }
tower-sessions = "0.10.4"
tower-sessions-redis-store = "0.10.0"
# Database
diesel = { version = "2.1.4", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
# Serialization
serde = { version = "1.0.197", features = ["derive"] }
# Web Framework - Template engine
askama = "0.12.1"
# Runtime - Logging
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
# Utilities
bcrypt = "0.15.0"
chrono = "0.4.34"
config = "0.14.0"

[profile.release]
strip = true
lto = true
